# cmake

module1/: addition.cpp  calculator  division.cpp  main.cpp  makefile
module2/: CMakeLists.txt
module2/my_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
module3/: CMakeLists.txt  addition.cpp  main.cpp  print_result.h
module3/my_math/include/my_math/: addition.h
module3/my_math/src/: addition.cpp
module3/my_math_dir/: CMakeLists.txt  division.cpp
module3/my_print/include/my_print/: print_result.h
module3/my_print_dir/: CMakeLists.txt  print_result.cpp
module4/: CMakeLists.txt
module5/: CMakeLists.txt
module5/demo_subdirectory_scope/: CMakeLists.txt
module6/: CMakeLists.txt  main.cpp
module6/my_math/: CMakeLists.txt
module6/my_math/src/: division.cpp
module6/my_print/: CMakeLists.txt
module6/my_print/src/: print_result.cpp
